--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,14 +10,18 @@ export(PackageDependencyReporter)
 export(PackageFunctionReporter)
 import(data.table)
 importFrom(R6,R6Class)
+importFrom(assertthat,assert_that)
+importFrom(assertthat,is.string)
 importFrom(covr,package_coverage)
 importFrom(covr,tally_coverage)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
+importFrom(data.table,is.data.table)
 importFrom(data.table,melt)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setnames)
 importFrom(futile.logger,flog.fatal)
+importFrom(futile.logger,flog.warn)
 importFrom(igraph,V)
 importFrom(igraph,centralization.betweenness)
 importFrom(igraph,centralization.closeness)
@@ -33,6 +37,7 @@ importFrom(igraph,page_rank)
 importFrom(igraph,vcount)
 importFrom(igraph,vertex)
 importFrom(magrittr,"%>%")
+importFrom(methods,is)
 importFrom(mvbutils,foodweb)
 importFrom(tools,package_dependencies)
 importFrom(utils,installed.packages)
