--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: R
 cache: packages
 warnings_are_errors: true
+before_install:
+- Rscript -e "install.packages('roxygen2', repos = 'http://cran.rstudio.org')"
