--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(CreatePackageReport)
 export(DefaultReporters)
 export(PackageDependencyReporter)
 export(PackageFunctionReporter)
+export(PackageSummaryReporter)
 import(data.table)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
