updates for travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ cache: packages
 warnings_are_errors: true
 before_install:
 - Rscript -e "install.packages('roxygen2', repos = 'http://cran.rstudio.org')"
+- Rscript -e "devtools::install('inst/baseballstats')"
+- Rscript -e "devtools::install('inst/sartre')"
