Major refactor with active bindings and cached data.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,11 +13,13 @@ importFrom(assertthat,is.string)
 importFrom(covr,package_coverage)
 importFrom(covr,tally_coverage)
 importFrom(data.table,as.data.table)
+importFrom(data.table,copy)
 importFrom(data.table,data.table)
-importFrom(data.table,is.data.table)
 importFrom(data.table,melt)
 importFrom(data.table,rbindlist)
+importFrom(data.table,setcolorder)
 importFrom(data.table,setnames)
+importFrom(data.table,uniqueN)
 importFrom(futile.logger,flog.fatal)
 importFrom(futile.logger,flog.warn)
 importFrom(igraph,V)
