Added some additional tests. Fixed some minor namespace issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ importFrom(igraph,page_rank)
 importFrom(igraph,vcount)
 importFrom(igraph,vertex)
 importFrom(magrittr,"%>%")
+importFrom(methods,formalArgs)
+importFrom(methods,hasArg)
 importFrom(methods,is)
 importFrom(mvbutils,foodweb)
 importFrom(tools,package_dependencies)
