Simplified CreatePackageReport and suppressed plotting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,11 @@ importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setnames)
 importFrom(data.table,uniqueN)
+importFrom(futile.logger,INFO)
 importFrom(futile.logger,flog.fatal)
+importFrom(futile.logger,flog.threshold)
 importFrom(futile.logger,flog.warn)
+importFrom(futile.logger,logger.options)
 importFrom(igraph,V)
 importFrom(igraph,centralization.betweenness)
 importFrom(igraph,centralization.closeness)
