added GetPackageGraphs function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(AbstractGraphReporter)
 export(AbstractPackageReporter)
 export(CreatePackageReport)
 export(DefaultReporters)
+export(GetPackageGraphs)
 export(PackageDependencyReporter)
 export(PackageFunctionReporter)
 export(PackageSummaryReporter)
