--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,6 @@ import(data.table)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,is.string)
-importFrom(covr,package_coverage)
-importFrom(covr,tally_coverage)
 importFrom(data.table,as.data.table)
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
@@ -45,6 +43,7 @@ importFrom(methods,formalArgs)
 importFrom(methods,hasArg)
 importFrom(methods,is)
 importFrom(mvbutils,foodweb)
+importFrom(rmarkdown,render)
 importFrom(tools,package_dependencies)
 importFrom(utils,installed.packages)
 importFrom(utils,lsf.str)
