--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,6 +10,8 @@ navbar:
       href: index.html
     - text: "Reference"
       href: reference/index.html
+    - text: "Articles"
+      href: articles/index.html
 
   right:
    - icon: fa-github
