Removed redundant Package prefix from class names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ export(AbstractGraphReporter)
 export(AbstractPackageReporter)
 export(CreatePackageReport)
 export(DefaultReporters)
-export(PackageDependencyReporter)
-export(PackageFunctionReporter)
-export(PackageSummaryReporter)
+export(DependencyReporter)
+export(FunctionReporter)
+export(SummaryReporter)
 import(data.table)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
