--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R: c(
 Maintainer: Brian Burns <brian.burns@uptake.com>
 Description: Tools from the domain of graph theory can be used to quantify the complexity
              and vulnerability to failure of a software package. That is the guiding philosophy
-             of this package. "pkgnet" provides tools to analyze the dependencies between functions
+             of this package. 'pkgnet' provides tools to analyze the dependencies between functions
              in an R package and between its imported packages.
 Imports:
     assertthat,
@@ -31,6 +31,8 @@ Suggests:
     devtools,
     testthat
 License: BSD_3_clause + file LICENSE
+URL: https://github.com/UptakeOpenSource/pkgnet
+BugReports: https://github.com/UptakeOpenSource/pkgnet/issues
 LazyData: TRUE
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
