allowed pkg_path to be a relative path, updated docs and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ importFrom(methods,hasArg)
 importFrom(methods,is)
 importFrom(mvbutils,foodweb)
 importFrom(rmarkdown,render)
+importFrom(tools,file_path_as_absolute)
 importFrom(tools,package_dependencies)
 importFrom(utils,installed.packages)
 importFrom(utils,lsf.str)
