vignette edit to write to temp directory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(DependencyReporter)
 export(FunctionReporter)
 export(SummaryReporter)
 import(data.table)
+importFrom(DT,datatable)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,is.string)
@@ -38,6 +39,7 @@ importFrom(igraph,neighborhood.size)
 importFrom(igraph,page_rank)
 importFrom(igraph,vcount)
 importFrom(igraph,vertex)
+importFrom(knitr,knit_child)
 importFrom(magrittr,"%>%")
 importFrom(methods,formalArgs)
 importFrom(methods,hasArg)
@@ -46,6 +48,7 @@ importFrom(mvbutils,foodweb)
 importFrom(rmarkdown,render)
 importFrom(tools,file_path_as_absolute)
 importFrom(tools,package_dependencies)
+importFrom(utils,browseURL)
 importFrom(utils,installed.packages)
 importFrom(utils,lsf.str)
 importFrom(visNetwork,visEdges)
