report location and format edits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(mvbutils,foodweb)
 importFrom(rmarkdown,render)
 importFrom(tools,file_path_as_absolute)
 importFrom(tools,package_dependencies)
+importFrom(utils,browseURL)
 importFrom(utils,installed.packages)
 importFrom(utils,lsf.str)
 importFrom(visNetwork,visEdges)
