Added more error checks on paths passed to CreatePackageReport

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(SummaryReporter)
 import(data.table)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
+importFrom(assertthat,is.readable)
 importFrom(assertthat,is.string)
+importFrom(assertthat,is.writeable)
 importFrom(data.table,as.data.table)
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
@@ -44,6 +46,7 @@ importFrom(methods,hasArg)
 importFrom(methods,is)
 importFrom(mvbutils,foodweb)
 importFrom(rmarkdown,render)
+importFrom(tools,file_ext)
 importFrom(tools,file_path_as_absolute)
 importFrom(tools,package_dependencies)
 importFrom(utils,browseURL)
