fixed misspecified logger import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(data.table,setnames)
 importFrom(data.table,uniqueN)
 importFrom(futile.logger,INFO)
 importFrom(futile.logger,flog.fatal)
+importFrom(futile.logger,flog.info)
 importFrom(futile.logger,flog.threshold)
 importFrom(futile.logger,flog.warn)
 importFrom(futile.logger,logger.options)
