--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: R
 cache: packages
 warnings_are_errors: true
+
 before_install:
 - Rscript -e "install.packages('roxygen2', repos = 'http://cran.rstudio.org')"
 - Rscript -e "install.packages('devtools', repos = 'http://cran.rstudio.org')"
+
+after_success:
+    - Rscript -e 'install.packages("covr"); covr::codecov()'
