fixed some misc R CMD CHECK stuff with NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,14 @@ export(DependencyReporter)
 export(FunctionReporter)
 export(SummaryReporter)
 import(data.table)
+importFrom(DT,datatable)
+importFrom(DT,formatRound)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,is.readable)
 importFrom(assertthat,is.string)
 importFrom(assertthat,is.writeable)
+importFrom(covr,package_coverage)
 importFrom(data.table,as.data.table)
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
