--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+
+# Misc files
 .Rhistory
 tests/testthat/Rplots.pdf
+**/.DS_Store
+
+# data files
+**/*.rds
+**/*.rda
+**/*.csv
+
+# build artifacts
+**/*.tar.gz
+pkgnet.Rcheck/*
