--- a/inst/milne/DESCRIPTION
+++ b/inst/milne/DESCRIPTION
@@ -8,6 +8,11 @@ Authors@R: c(
     )
 Maintainer: Jay Qi <jay.qi@uptake.com>
 Description: This package is used to test the functions in `pkgnet`. So I think I'll be six now for ever and ever.
+Imports:
+    R6
+Suggests:
+    covr,
+    testthat
 License: file LICENSE
 LazyData: TRUE
 RoxygenNote: 6.1.1
