--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(CreatePackageReport)
 export(DefaultReporters)
 export(DependencyReporter)
 export(FunctionReporter)
+export(InheritanceReporter)
 export(SummaryReporter)
 import(data.table)
 importFrom(DT,datatable)
