--- a/inst/milne/NAMESPACE
+++ b/inst/milne/NAMESPACE
@@ -6,4 +6,8 @@ export(One)
 export(Six)
 export(Three)
 export(Two)
+exportClasses(MyAnswer)
+exportClasses(PoohAnswer)
+exportClasses(RightAnswer)
+exportClasses(WrongAnswer)
 importFrom(R6,R6Class)
