.gitignore data files in top level dir only

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-
 # Misc files
 .Rhistory
 *.Rproj
 tests/testthat/Rplots.pdf
 **/.DS_Store
+
+# data files    
+/*.rds
+/*.rda
+/*.csv
 
 # build artifacts
 **/*.tar.gz
