Fixed FunctionReporter to use R6 class generator name and not classname attribute

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ import(data.table)
 importFrom(DT,datatable)
 importFrom(DT,formatRound)
 importFrom(R6,R6Class)
+importFrom(R6,is.R6Class)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,is.readable)
 importFrom(assertthat,is.string)
