--- a/inst/milne/NAMESPACE
+++ b/inst/milne/NAMESPACE
@@ -3,10 +3,12 @@
 export(Five)
 export(Four)
 export(One)
+export(PoohAnsuh)
+export(RightAnswer)
 export(Six)
 export(Three)
 export(Two)
-exportClasses(MyAnswer)
+export(WrongAnswer)
 exportClasses(PoohAnswer)
 exportClasses(RightAnswer)
 exportClasses(WrongAnswer)
