--- a/inst/milne/DESCRIPTION
+++ b/inst/milne/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
     person("Jay", "Qi", email = "jay.qi@uptake.com", role = c("aut", "cre"))
     )
 Maintainer: Jay Qi <jay.qi@uptake.com>
-Description: This package is used to test the functions in `pkgnet`. So I think I'll be six now for ever and ever.
+Description: This package is used to test object-oriented class functionality for the reporters in `pkgnet`. So I think I'll be six now for ever and ever.
 Imports:
     R6
 Suggests:
