Undo accidental .gitignore change

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ tests/testthat/Rplots.pdf
 **/.DS_Store
 
 # data files    
-/*.rds
-/*.rda
-/*.csv
+**/*.rds
+**/*.rda
+**/*.csv
 
 # Keep data files in testdata
 !/tests/testthat/testdata/*.csv
