--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(data.table,data.table)
 importFrom(data.table,melt)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
+importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
 importFrom(data.table,uniqueN)
 importFrom(futile.logger,INFO)
