changes for pkgdown rendering

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,6 +12,8 @@ navbar:
       href: reference/index.html
     - text: "Articles"
       href: articles/index.html
+    - text: "News"
+      href: news/index.html
 
   right:
    - icon: fa-github
