--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
-pandoc: 2.1.3
-pkgdown: 0.1.0.9000
-pkgdown_sha: 7d8b4882c4eb650f0f869a618f5c445c657313f0
+pandoc: '2.5'
+pkgdown: 1.3.0
+pkgdown_sha: ~
 articles:
   pkgnet-intro: pkgnet-intro.html
 
