test on mac and linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: R
 cache: packages
 warnings_are_errors: true
 
+os:
+  - linux
+  - osx
+
 before_install:
 - Rscript -e "install.packages('roxygen2', repos = 'http://cran.rstudio.org')"
 - Rscript -e "install.packages('devtools', repos = 'http://cran.rstudio.org')"
