suggested edits from PR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(igraph,neighborhood.size)
 importFrom(igraph,page_rank)
 importFrom(igraph,vcount)
 importFrom(igraph,vertex)
+importFrom(igraph,vertex.attributes)
 importFrom(knitr,opts_chunk)
 importFrom(magrittr,"%>%")
 importFrom(methods,formalArgs)
