Reorganized unit tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(AbstractPackageReporter)
 export(CreatePackageReport)
 export(DefaultReporters)
 export(DependencyReporter)
+export(DirectedGraph)
 export(FunctionReporter)
 export(InheritanceReporter)
 export(SummaryReporter)
