Roxygen documentation for DirectedGraph

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(AbstractPackageReporter)
 export(CreatePackageReport)
 export(DefaultReporters)
 export(DependencyReporter)
-export(DirectedGraph)
 export(FunctionReporter)
 export(InheritanceReporter)
 export(SummaryReporter)
@@ -35,20 +34,21 @@ importFrom(futile.logger,flog.threshold)
 importFrom(futile.logger,flog.warn)
 importFrom(futile.logger,logger.options)
 importFrom(igraph,V)
-importFrom(igraph,centralization.betweenness)
-importFrom(igraph,centralization.closeness)
-importFrom(igraph,centralization.degree)
+importFrom(igraph,authority_score)
+importFrom(igraph,betweenness)
+importFrom(igraph,centr_betw_tmax)
+importFrom(igraph,centr_clo_tmax)
+importFrom(igraph,centr_degree_tmax)
+importFrom(igraph,centralize)
+importFrom(igraph,closeness)
 importFrom(igraph,degree)
 importFrom(igraph,graph.edgelist)
-importFrom(igraph,graph_from_edgelist)
 importFrom(igraph,hub_score)
-importFrom(igraph,layout_as_tree)
-importFrom(igraph,layout_in_circle)
+importFrom(igraph,make_empty_graph)
 importFrom(igraph,neighborhood.size)
 importFrom(igraph,page_rank)
 importFrom(igraph,vcount)
 importFrom(igraph,vertex)
-importFrom(igraph,vertex.attributes)
 importFrom(knitr,opts_chunk)
 importFrom(magrittr,"%>%")
 importFrom(methods,formalArgs)
