--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Imports:
     R6,
     rmarkdown(>= 1.9),
     tools,
-    visNetwork
+    visNetwork,
+    glue,
+    rlang
 Suggests:
     devtools,
     testthat, 
