Added block for package_report.Rmd imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,8 @@ importFrom(igraph,neighborhood.size)
 importFrom(igraph,page_rank)
 importFrom(igraph,vcount)
 importFrom(igraph,vertex)
+importFrom(knitr,knit_child)
+importFrom(knitr,opts_chunk)
 importFrom(magrittr,"%>%")
 importFrom(methods,is)
 importFrom(rmarkdown,render)
