--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,7 @@
 template:
   params:
     bootswatch: flatly
+    ganalytics: UA-137355155-1 # google analytics tracking ID
     docsearch:
       api_key: 8c4486b693a542e8493b7944f39ab632 # intended API inclusion.  Not private.
       index_name: pkgnet # See https://pkgdown.r-lib.org/articles/pkgdown.html#docsearch-configuration
