--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,4 +3,8 @@ pkgdown: 1.3.0
 pkgdown_sha: ~
 articles:
   pkgnet-intro: pkgnet-intro.html
+  publishing-reports: publishing-reports.html
+urls:
+  reference: https://uptakeopensource.github.io/pkgnet//reference
+  article: https://uptakeopensource.github.io/pkgnet//articles
 
