--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(DefaultReporters)
 export(DependencyReporter)
 export(FunctionReporter)
 export(InheritanceReporter)
+export(PackageReport)
 export(SummaryReporter)
 import(data.table)
 importFrom(DT,datatable)
