UptakeOpenSource -> uptake in source code, yml, vignettes, and NEWS.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,8 +34,8 @@ Suggests:
     testthat, 
     withr
 License: BSD_3_clause + file LICENSE
-URL: https://github.com/UptakeOpenSource/pkgnet, https://uptakeopensource.github.io/pkgnet/
-BugReports: https://github.com/UptakeOpenSource/pkgnet/issues
+URL: https://github.com/uptake/pkgnet, https://uptake.github.io/pkgnet/
+BugReports: https://github.com/uptake/pkgnet/issues
 LazyData: TRUE
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
