--- a/inst/sartre/DESCRIPTION
+++ b/inst/sartre/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1
 Author: Uptake Data Science
 Authors@R: c(
     person("Brian", "Burns", email = "brian.burns@uptake.com", role = c("aut", "cre")),
-    person("James", "Lamb", email = "james.lamb@uptake.com", role = c("aut"))
+    person("James", "Lamb", email = "jaylamb20@gmail.com", role = c("aut"))
     )
 Maintainer: Brian Burns <Brian.Burns@uptake.com>
 Description: This package is used to test the functions in `pkgnet`.  It's a "nothing" network. Get it?
