Fix data.table osx install bug for travis. Closes #250.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ os:
   - osx
 
 before_install:
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install llvm &&
+    export PATH="/usr/local/opt/llvm/bin:$PATH" &&
+    export LDFLAGS="-L/usr/local/opt/llvm/lib" &&
+    export CFLAGS="-I/usr/local/opt/llvm/include"; fi
 - Rscript -e "install.packages('roxygen2', repos = 'http://cran.rstudio.org')"
 - Rscript -e "install.packages('devtools', repos = 'http://cran.rstudio.org')"
 
