--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,10 @@
-pandoc: '2.5'
-pkgdown: 1.3.0
+pandoc: 2.9.2.1
+pkgdown: 1.5.0
 pkgdown_sha: ~
 articles:
   pkgnet-intro: pkgnet-intro.html
   publishing-reports: publishing-reports.html
+last_built: 2020-03-29T05:21Z
 urls:
   reference: https://uptake.github.io/pkgnet//reference
   article: https://uptake.github.io/pkgnet//articles
