--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Maintainer: Brian Burns <brian.burns.opensource@gmail.com>
 Description: Tools from the domain of graph theory can be used to quantify the complexity
              and vulnerability to failure of a software package. That is the guiding philosophy
              of this package. 'pkgnet' provides tools to analyze the dependencies between functions
-             in an R package and between its imported packages.
+             in an R package and between its imported packages.  See the pkgnet website for vignettes 
+             and other supplementary information.
 Imports:
     assertthat,
     covr,
