remove misc/smoke_tests from GitHub Actions

--- a/.github/workflows/smoke-tests.yaml
+++ b/.github/workflows/smoke-tests.yaml
@@ -5,7 +5,9 @@ on:
   push:
     branches:
     - master
-    - misc/smoke_tests
+  schedule:
+    # Run every Sunday
+    - cron: '0 0 * * 0'
 
 jobs:
   test:
