--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
         uses: actions/checkout@v3.1.0
         with:
           fetch-depth: 1
+      - name: Install Tidy Ubuntu
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt install -y tidy
       - name: set up R
         uses: r-lib/actions/setup-r@v2
         with:
