--- a/.github/workflows/smoke-tests.yaml
+++ b/.github/workflows/smoke-tests.yaml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@v3.1.0
         with:
           fetch-depth: 1
+      - name: Install Tidy
+        run: sudo apt install -y tidy 
       - name: set up R
         shell: bash
         run: |
