--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,12 @@ jobs:
     name: Confirm Whole Version Number
     runs-on: ubuntu-latest
     steps:
+      - name: checkout repository
+        uses: actions/checkout@v4
       - shell: bash
-        run: grep -E "Version:\s\d+\.\d+\.\d+$" DESCRIPTION
+        run: grep -E "Version:\s\d+\.\d+\.\d+$"  $GITHUB_WORKSPACE/DESCRIPTION
   devel_test:
     name: ${{ matrix.os }} (R ${{ matrix.r-version }})
-    needs: [version_check]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     strategy:
@@ -45,17 +46,16 @@ jobs:
           r-version: ${{ matrix.r-version }}
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-tinytex@v2
-      - name: set up dependencies
-        shell: bash
-        env:
-          OS_NAME: ${{ matrix.os }}
-        run: $GITHUB_WORKSPACE/.github/setup.sh
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::rcmdcheck
+          needs: check
       - name: run R CMD CHECK tests
         shell: bash
         run: $GITHUB_WORKSPACE/test.sh
   all-successful:
     runs-on: ubuntu-latest
-    needs: [devel_test]
+    needs: [version_check, devel_test]
     steps:
       - name: Note that all tests succeeded
         run: echo "🎉"
