--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: r-lib/actions/setup-tinytex@v2
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
+          extra-packages: any::rcmdcheck, any::covr
           needs: check
       - uses: r-lib/actions/check-r-package@v2
         with:
@@ -47,7 +47,7 @@ jobs:
       - name: upload coverage
         if: ${{ matrix.os == 'macos-latest' && matrix.r-version == 'release' }}
         shell: Rscript {0}
-        run: covr::codecov()
+        run: covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")
   # https://github.community/t/is-it-possible-to-require-all-github-actions-tasks-to-pass-without-enumerating-them/117957/4?u=graingert
   all-successful:
     runs-on: ubuntu-latest
