--- a/.github/workflows/smoke-tests.yaml
+++ b/.github/workflows/smoke-tests.yaml
@@ -14,22 +14,27 @@ jobs:
   test:
     name: smoke-tests
     runs-on: ubuntu-latest
+    env:
+      PKGNET_SUPPRESS_BROWSER: 0
+    strategy:
+      max-parallel: 8 # Let's be reasonable
+      matrix: 
+        test_pkg: [rcmdcheck, covr, assertthat, data.table, DT, futile.logger,glue, igraph, knitr, magrittr, R6, rlang, rmarkdown, visNetwork]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3.1.0
+        uses: actions/checkout@v4
         with:
           fetch-depth: 1
+      - name: set up R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: 'release'
       - name: Install Tidy
         run: sudo apt install -y tidy 
-      - name: set up R
-        shell: bash
-        run: |
-          export GITHUB_ACTIONS="true"
-          ${GITHUB_WORKSPACE}/smoke_tests/setup.sh
-      - name: run smoke tests
-        shell: bash
-        run: |
-          R CMD INSTALL .
-          TEST_DATA_DIR=$(pwd)/smoke_tests/test_data
-          NUM_PARALLEL=4
-          ${GITHUB_WORKSPACE}/smoke_tests/test.sh ${TEST_DATA_DIR} ${NUM_PARALLEL}
+      - name: Install Deps For Pkgnet & ${{ matrix.test_pkg }}
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: ${{ matrix.test_pkg }}, local::.
+      - name: run smoke test
+        shell: Rscript {0}
+        run: "pkgnet::CreatePackageReport(pkg_name='${{ matrix.test_pkg }}', report_path='${{ github.workspace }}/${{ matrix.test_pkg }}_report.html')"
