--- a/.github/workflows/smoke-tests.yaml
+++ b/.github/workflows/smoke-tests.yaml
@@ -17,7 +17,7 @@ jobs:
     env:
       PKGNET_SUPPRESS_BROWSER: 0
     strategy:
-      max-parallel: 8 # Let's be reasonable
+      fail-fast: false
       matrix: 
         test_pkg: [rcmdcheck, covr, assertthat, data.table, DT, futile.logger,glue, igraph, knitr, magrittr, R6, rlang, rmarkdown, visNetwork]
     steps:
@@ -38,3 +38,10 @@ jobs:
       - name: run smoke test
         shell: Rscript {0}
         run: "pkgnet::CreatePackageReport(pkg_name='${{ matrix.test_pkg }}', report_path='${{ github.workspace }}/${{ matrix.test_pkg }}_report.html')"
+  # https://github.community/t/is-it-possible-to-require-all-github-actions-tasks-to-pass-without-enumerating-them/117957/4?u=graingert
+  all-successful:
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+    - name: Note that all smoke tests succeeded
+      run: echo "🚫🔥==🐻👍🏼👍🏼"
